# eBPFAdblock

./: .gitignore  CMakeLists.txt  Makefile  README.md  XDP_block.bpf.c  XDP_block.c  XDP_part.bpf.c  dns_matching.c  dns_matching.py  domain_parser.py  domains_file.txt  hello_world.c  manage.c  manage.py  map.py  map_ebpf.c  map_ip_adder.py  run_adblock.sh
bpf/: map_creator.bpf.c  map_tracer.bpf.c
info/: readme.md
probing/: .ebpf-runner.py.swp  ebpf-runner.py  my_sh.sh  readme.md
probing/my_probes/execve_probe/: makefile
probing/my_probes/getaddrinfo_probe/: ebpf_ip_getter.c  makefile
probing/my_probes/sending_probe/: ebpf_udp_sendmsg.c  makefile
probing/my_probes/sending_probe2/: ebpf_sendto.c  makefile
sys_calls_management/: compile.sh  compile_getaddrinfo.sh  ebpf_ip_getter.c  ip_getter.c  readme.md  test
tracing/execve/: loader.c  makefile  syscall_trace.bpf.c
userspace/: map_interactor.c  map_loader.c  map_logger.c
